--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -62,8 +62,23 @@
         .desc {
           margin-right: 10rpx;
         }
-        .line {
 
+        .bus-line {
+          background-color: #007aff;
+          color: #ffffff;
+          padding: 3rpx 10rpx;
+          border-radius: 10rpx;
+          margin-right: 15rpx;
+          line-height: 2;
+          line-break: auto;
+        }
+
+        .metro-line {
+          color: #ffffff;
+          padding: 3rpx 10rpx;
+          border-radius: 10rpx;
+          margin-right: 15rpx;
+          line-height: 28rpx;
         }
       }
     }
