创建线路详情页; 添加图标

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,5 +1,6 @@
 .page {
   background-color: #eeeef4;
+  padding-top: 15rpx;
 }
 
 .info-container {
@@ -42,9 +43,18 @@
           margin-right: 50rpx;
         }
 
-        .distance {
-          font-size: 28rpx;
-          color: #999;
+        .distance-container {
+          display: flex;
+
+          .distance {
+            font-size: 28rpx;
+            color: #999;
+          }
+
+          .distance-icon {
+            width: 45rpx;
+            height: 45rpx;
+          }
         }
       }
 
