线路详情页数据获取

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -74,20 +74,22 @@
         }
 
         .bus-line {
+          display: inline-block;
+          vertical-align: top;
+          margin-top: 3rpx;
           background-color: #007aff;
           color: #ffffff;
-          padding: 3rpx 10rpx;
+          padding: 2rpx 10rpx;
+          margin-right: 12rpx;
           border-radius: 10rpx;
-          margin-right: 15rpx;
-          line-height: 2;
-          line-break: auto;
+          line-height: 32rpx;
         }
 
         .metro-line {
           color: #ffffff;
-          padding: 3rpx 10rpx;
+          padding: 2rpx 10rpx;
           border-radius: 10rpx;
-          margin-right: 15rpx;
+          margin-right: 12rpx;
           line-height: 28rpx;
         }
       }
