线路详情页样式设计

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,5 +1,7 @@
+@import url("../../style.less");
+
 .page {
-  background-color: #eeeef4;
+  background-color: @backgroundColor;
   padding-top: 15rpx;
 }
 
@@ -17,7 +19,7 @@
     }
 
     .title {
-      font-size: 42rpx;
+      font-size: @titleSize;
       font-weight: bold;
       margin-bottom: 10rpx;
     }
