添加线路站点列表, 站点详情页 完成raw data渲染; 添加页面跳转

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -85,6 +85,10 @@
           margin-right: 12rpx;
           border-radius: 10rpx;
           line-height: 32rpx;
+
+          &:active {
+            background-color: #004fdd;
+          }
         }
 
         .metro-line {
