--- a/pages/line_direction_detail/line_direction_detail.less
+++ b/pages/line_direction_detail/line_direction_detail.less
@@ -64,6 +64,14 @@
           font-size: 30rpx;
         }
 
+        .station {
+          text-decoration: underline;
+
+          &:active {
+            color: #333333;
+          }
+        }
+
         .small-content {
           font-size: 28rpx;
           color: #555555;
