展示地铁线路站点列表

--- a/pages/line_direction_detail/line_direction_detail.less
+++ b/pages/line_direction_detail/line_direction_detail.less
@@ -17,4 +17,10 @@
 
 .direction-container {
   padding: 2rpx;
+
+  .interval {
+    padding: 5rpx;
+    font-weight: bold;
+    margin-bottom: 10rpx;
+  }
 }
