--- a/pages/line_direction_stations/line_direction_stations.less
+++ b/pages/line_direction_stations/line_direction_stations.less
@@ -4,6 +4,12 @@
   background-color: @backgroundColor;
 }
 
+.direction-container {
+  position: sticky;
+  top: 1rpx;
+  margin-bottom: 2rpx;
+}
+
 .title {
   font-size: 36rpx;
   font-weight: bold;
