站点详情页添加英文名

--- a/components/station/station.less
+++ b/components/station/station.less
@@ -44,6 +44,7 @@
         height: 28rpx;
         margin-top: 4rpx;
         margin-right: 10rpx;
+        vertical-align: -10%;
       }
 
       .desc {
