--- a/components/bus_station_line/bus_station_line.less
+++ b/components/bus_station_line/bus_station_line.less
@@ -13,6 +13,14 @@
     margin-bottom: 20rpx;
 
     .line-direction {
+      .icon {
+        width: 28rpx;
+        height: 28rpx;
+        margin-top: 4rpx;
+        margin-right: 10rpx;
+        vertical-align: -10%;
+      }
+
       .line-name {
         font-weight: bold;
         margin-right: 15rpx;
