--- a/components/title/title.less
+++ b/components/title/title.less
@@ -3,45 +3,59 @@
 
 .title-container {
   padding: 10rpx;
-  display: flex;
-  justify-content: space-between;
+  //display: flex;
+  //justify-content: space-between;
+  display: grid;
+  grid-template-rows: 50% 50%;
   background-color: #fff;
   margin-bottom: 5rpx;
   position: sticky;
   top: 1rpx;
 
-  .title-block {
-    margin-bottom: 15rpx;
+  .title-row {
+    display: flex;
+    justify-content: space-between;
 
-    .icon-big {
-      width: 40rpx;
-      height: 40rpx;
-      margin-right: 10rpx;
-      margin-top: 9rpx;
-      vertical-align: -12%;
+    .title-block {
+      margin-bottom: 15rpx;
+
+      .icon-big {
+        width: 40rpx;
+        height: 40rpx;
+        margin-right: 10rpx;
+        margin-top: 9rpx;
+        vertical-align: -12%;
+      }
+
+      .title {
+        font-size: 40rpx;
+        font-weight: bold;
+        margin-right: 15rpx;
+      }
     }
 
-    .title {
-      font-size: 40rpx;
-      font-weight: bold;
-      margin-right: 15rpx;
+    .location {
+      font-size: 26rpx;
+      color: darkgray;
+      margin-top: 20rpx;
+
+      .city {
+        margin-right: 10rpx;
+      }
+
+      .icon {
+        width: 24rpx;
+        height: 24rpx;
+        margin-top: 4rpx;
+        margin-right: 10rpx;
+      }
     }
   }
 
-  .location {
-    font-size: 26rpx;
-    color: darkgray;
-    margin-top: 20rpx;
-
-    .city {
-      margin-right: 10rpx;
-    }
-
-    .icon {
-      width: 24rpx;
-      height: 24rpx;
-      margin-top: 4rpx;
-      margin-right: 10rpx;
-    }
+  .subtitle {
+    font-weight: bold;
+    margin-top: 5rpx;
+    margin-left: 50rpx;
   }
+
 }
