地铁站点详情页展示每一站的换成线路信息

--- a/pages/line_direction_stations/line_direction_stations.less
+++ b/pages/line_direction_stations/line_direction_stations.less
@@ -53,6 +53,19 @@
         text-decoration: underline;
         color: #333333;
       }
+
+      .transfer {
+        color: #ffffff;
+        font-size: 24rpx;
+        line-height: 24rpx;
+        margin-top: 15rpx;
+
+        .transfer-line {
+          padding: 2rpx 10rpx;
+          border-radius: 10rpx;
+          margin-right: 8rpx;
+        }
+      }
     }
 
     .location-row {
