修改英文名样式

--- a/pages/line_direction_stations/line_direction_stations.less
+++ b/pages/line_direction_stations/line_direction_stations.less
@@ -46,6 +46,12 @@
       .station-name {
         font-size: 30rpx;
         color: #333333;
+        margin-right: 15rpx;
+      }
+
+      .english-name {
+        font-size: 20rpx;
+        color: #555555;
       }
 
       .realtime {
