引入腾讯地图SDK, 添加map组件; 修改相关组件和样式

--- a/components/search_bar/search_bar.less
+++ b/components/search_bar/search_bar.less
@@ -6,6 +6,11 @@
   line-height: 24rpx;
   display: flex;
   justify-content: space-between;
+  background-color: #fff;
+
+  position: sticky;
+  top: 500rpx;
+  z-index: 1000;
 
   .icon {
     width: 45rpx;
@@ -14,7 +19,7 @@
   }
 
   .search {
-    background-color: #fff;
+    background-color: #eeeef4;
     border-radius: 10rpx;
     width: 100%;
     display: inline-block;
