[bug fix] 解决首页元素无法顶部悬停的问题

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -2,13 +2,22 @@
 
 .page {
   background-color: @backgroundColor;
+
+  .search {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
+
+  .map {
+    position: sticky;
+    top: 70rpx;
+    z-index: 100;
+  }
 }
 
 .info-container {
   padding: 5rpx;
-
-  .title {
-    position: sticky;
-    top: 500rpx !important;
-  }
+  position: sticky;
+  top: 370rpx;
 }
