首页展示地铁站英文名

--- a/components/station/station.less
+++ b/components/station/station.less
@@ -13,7 +13,7 @@
     .station-distance {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 10rpx;
+      margin-bottom: 5rpx;
 
       .station-name {
         font-weight: bold;
@@ -35,6 +35,13 @@
       }
     }
 
+    .english-name {
+      font-size: 26rpx;
+      color: #222222;
+      margin-bottom: 15rpx;
+      margin-left: 3rpx;
+    }
+
     .lines {
       font-size: 28rpx;
       color: #2C405A;
@@ -54,11 +61,12 @@
       .bus-line {
         display: inline-block;
         vertical-align: top;
-        margin-top: 3rpx;
         background-color: #007aff;
         color: #ffffff;
         padding: 2rpx 10rpx;
+        margin-top: 3rpx;
         margin-right: 12rpx;
+        margin-bottom: 10rpx;
         border-radius: 10rpx;
         line-height: 32rpx;
 
