--- a/pages/station_detail/station_detail.less
+++ b/pages/station_detail/station_detail.less
@@ -4,6 +4,19 @@
   background-color: @backgroundColor;
 }
 
+.map {
+  width: 100%;
+  height: 300rpx;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+.title-container {
+  position: sticky;
+  top: 300rpx;
+}
+
 .lines-container {
   padding: 5rpx;
 }
