--- a/pages/line_direction_detail/line_direction_detail.less
+++ b/pages/line_direction_detail/line_direction_detail.less
@@ -4,6 +4,11 @@
   background-color: @backgroundColor;
 }
 
+.map-container {
+  width: 100%;
+  height: 300px;
+}
+
 .title {
   padding: 5rpx;
   margin-bottom: 10rpx;
