地铁主页完成站点列表展示和收起

--- a/components/loading/loading.less
+++ b/components/loading/loading.less
@@ -5,14 +5,13 @@
   height: 200rpx;
   padding: 30rpx;
 
-  display: block;
+  display: grid;
   vertical-align: center;
   text-align: center;
 
   background-color: #fff;
 
   .loading {
-    display: block;
     width: 32rpx;
     height: 32rpx;
     margin-bottom: 10rpx;
