重构metro-line-card组件

--- a/pages/line_direction_detail/line_direction_detail.less
+++ b/pages/line_direction_detail/line_direction_detail.less
@@ -7,17 +7,13 @@
 .map-container {
   width: 100%;
   height: 300px;
+  position: sticky;
+  top: 0;
 }
 
-.title {
-  padding: 5rpx;
-  margin-bottom: 10rpx;
-
-  .line-name {
-    font-weight: bold;
-    font-size: @titleSize;
-    margin-right: 10rpx;
-  }
+.title-container {
+  position: sticky;
+  top: 500rpx;
 }
 
 .direction-container {
