修复站点详情页无法显示的bug

--- a/components/metro_line_card/metro_line_card.less
+++ b/components/metro_line_card/metro_line_card.less
@@ -1,11 +1,11 @@
 @import url("../../style.less");
 
-
 .line-info-container {
   padding: 10rpx;
   border-radius: 5rpx;
   margin-bottom: 5rpx;
   border: solid 3rpx #808080;
+  background-color: #fff;
 
   .info-row {
     margin-bottom: 10rpx;
