--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -2,22 +2,28 @@
 
 .page {
   background-color: @backgroundColor;
+}
 
-  .search {
-    position: sticky;
-    top: 0;
-    z-index: 100;
-  }
+.search {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 
-  .map {
-    position: sticky;
-    top: 70rpx;
-    z-index: 100;
-  }
+.map-container {
+  width: 100%;
+  height: 300rpx;
+  position: sticky;
+  top: 70rpx;
+  z-index: 100;
 }
 
 .info-container {
   padding: 5rpx;
   position: sticky;
   top: 365rpx;
+}
+
+.loading-block {
+  z-index: -100;
 }
