--- a/pages/station_detail/station_detail.less
+++ b/pages/station_detail/station_detail.less
@@ -4,9 +4,9 @@
   background-color: @backgroundColor;
 }
 
-.map {
+.map-container {
   width: 100%;
-  height: 300rpx;
+  height: 500rpx;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -14,7 +14,7 @@
 
 .title-container {
   position: sticky;
-  top: 300rpx;
+  top: 500rpx;
 }
 
 .lines-container {
