站点详情完成toggle卫生间信息

--- a/components/metro_line_card/metro_line_card.less
+++ b/components/metro_line_card/metro_line_card.less
@@ -41,8 +41,12 @@
         text-decoration: underline;
       }
 
-      .detail {
+      .washrooms {
         margin-right: 20rpx;
+      }
+
+      .detail {
+        margin-right: 10rpx;
       }
     }
   }
@@ -129,6 +133,57 @@
 
         &:not(:last-child) {
           border-bottom: solid 1rpx #808080;;
+        }
+      }
+    }
+  }
+
+  .washrooms-block {
+    margin-top: 15rpx;
+
+    .washrooms-container {
+      .subtitle {
+        font-size: 24rpx;
+        color: #3F536E;
+        margin-bottom: 15rpx;
+
+        .content {
+          margin-right: 20rpx;
+        }
+
+        .position {
+          color: #fff;
+          font-size: 20rpx;
+          height: 22rpx;
+          line-height: 22rpx;
+          padding: 3rpx;
+          border-radius: 8rpx;
+          margin-right: 15rpx;
+        }
+
+        .both {
+          background-color: #1afa29;
+        }
+
+        .in {
+          background-color: #e07906;
+        }
+
+        .no {
+          background-color: #8a8a8a;
+        }
+      }
+
+      .washroom-item {
+        .icon {
+          height: 24rpx;
+          width: 24rpx;
+          margin-right: 15rpx;
+        }
+
+        .desc {
+          font-size: 20rpx;
+          color: #555555;
         }
       }
     }
