修改图标; 修复显示时的小问题

--- a/components/metro_line_card/metro_line_card.less
+++ b/components/metro_line_card/metro_line_card.less
@@ -162,7 +162,7 @@
         }
 
         .both {
-          background-color: #1afa29;
+          background-color: #39af08;
         }
 
         .in {
