处理地铁线路和站点状态展示逻辑

--- a/components/title/title.less
+++ b/components/title/title.less
@@ -28,6 +28,10 @@
         font-weight: bold;
         margin-right: 15rpx;
       }
+
+      .desc {
+        font-size: 28rpx;
+      }
     }
 
     .location {
