添加并跳转到站点出入口页面

--- a/pages/station_detail/station_detail.less
+++ b/pages/station_detail/station_detail.less
@@ -17,6 +17,27 @@
   top: 500rpx;
 }
 
+.exit-container {
+  background-color: #fff;
+  padding: 10rpx;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5rpx;
+
+  .icon {
+    width: 24rpx;
+    height: 24rpx;
+  }
+
+  .text {
+    margin-left: 10rpx;
+  }
+
+  .arrow {
+    vertical-align: -15%;
+  }
+}
+
 .lines-container {
   padding: 5rpx;
 }
