添加换乘模块

--- a/pages/station_detail/station_detail.less
+++ b/pages/station_detail/station_detail.less
@@ -15,14 +15,6 @@
 .title-container {
   position: sticky;
   top: 500rpx;
-}
-
-.exit-container {
-  background-color: #fff;
-  padding: 10rpx;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 5rpx;
 
   .icon {
     width: 24rpx;
@@ -36,6 +28,14 @@
   .arrow {
     vertical-align: -15%;
   }
+}
+
+.subtitle-container {
+  background-color: #fff;
+  padding: 10rpx;
+  display: flex;
+  justify-content: space-between;
+  border-top: solid 1rpx #adadad;
 }
 
 .lines-container {
