--- a/components/title/title.less
+++ b/components/title/title.less
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-rows: 50% 50%;
   background-color: #fff;
-  margin-bottom: 5rpx;
+  //margin-bottom: 5rpx;
 
   .title-row {
     display: flex;
