调整全局接口地址对象; 调整首页布局

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -18,10 +18,14 @@
   z-index: 100;
 }
 
-.info-container {
+.title-container {
   padding: 5rpx;
   position: sticky;
   top: 365rpx;
+}
+
+.station-list {
+  margin-bottom: 30rpx;
 }
 
 .loading-block {
