首页地图支持回到当前位置

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -16,6 +16,14 @@
   position: sticky;
   top: 70rpx;
   z-index: 100;
+
+  .back-icon {
+    position: absolute;
+    bottom: 20rpx;
+    right: 20rpx;
+    width: 50rpx;
+    height: 50rpx;
+  }
 }
 
 .title-container {
