cover-image在首页悬停

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -16,14 +16,14 @@
   position: sticky;
   top: 70rpx;
   z-index: 100;
+}
 
-  .back-icon {
-    position: absolute;
-    bottom: 20rpx;
-    right: 20rpx;
-    width: 50rpx;
-    height: 50rpx;
-  }
+.back-icon {
+  position: fixed;
+  top: 90rpx;
+  left: 20rpx;
+  width: 50rpx;
+  height: 50rpx;
 }
 
 .title-container {
