--- a/pages/transfer/transfer.less
+++ b/pages/transfer/transfer.less
@@ -1,1 +1,14 @@
 @import url("../../style.less");
+
+.map-container {
+  width: 100%;
+  height: 500rpx;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+.title-container {
+  position: sticky;
+  top: 500rpx;
+}
