--- a/pages/bus/bus.less
+++ b/pages/bus/bus.less
@@ -3,3 +3,31 @@
 .page {
   background-color: @backgroundColor;
 }
+
+.tab-container {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  height: 70rpx;
+  background-color: #fff;
+
+  .nav {
+    width: 100%;
+    font-size: 28rpx;
+    display: table-cell;
+    text-align: center;
+    vertical-align: center;
+    border-right: solid 2rpx #000000;
+  }
+
+  .tab-active {
+    font-size: 28rpx;
+    font-weight: bold;
+  }
+}
+
+.search-bar {
+  position: sticky;
+  top: 70rpx;
+}
