公交查询页完成线路和站点的分栏

--- a/components/station_card/station_card.less
+++ b/components/station_card/station_card.less
@@ -10,7 +10,7 @@
     border-radius: 5rpx;
     margin-bottom: 1rpx;
 
-    .station-distance {
+    .station-distance-location {
       display: flex;
       justify-content: space-between;
       margin-bottom: 5rpx;
@@ -33,11 +33,27 @@
           height: 45rpx;
         }
       }
+
+      .location {
+        font-size: 22rpx;
+        color: darkgray;
+
+        .city {
+          margin-right: 10rpx;
+        }
+
+        .icon {
+          width: 24rpx;
+          height: 24rpx;
+          margin-top: 4rpx;
+          margin-right: 10rpx;
+        }
+      }
     }
 
     .english-name {
-      font-size: 26rpx;
-      color: #222222;
+      font-size: 24rpx;
+      color: #808080;
       margin-bottom: 15rpx;
       margin-left: 3rpx;
     }
