--- a/pages/bus/bus.less
+++ b/pages/bus/bus.less
@@ -9,25 +9,40 @@
   top: 0;
   display: flex;
   justify-content: space-between;
-  height: 70rpx;
+  height: 50rpx;
   background-color: #fff;
+  padding: 5rpx;
 
-  .nav {
+  .tab-item {
     width: 100%;
-    font-size: 28rpx;
-    display: table-cell;
-    text-align: center;
-    vertical-align: center;
-    border-right: solid 2rpx #000000;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .icon {
+      width: 30rpx;
+      height: 30rpx;
+      margin-right: 10rpx;
+    }
+
+    .nav {
+      padding: 5rpx;
+      font-size: 28rpx;
+      display: grid;
+      text-align: center;
+      vertical-align: center;
+    }
   }
 
   .tab-active {
     font-size: 28rpx;
     font-weight: bold;
+    background-color: #c9c9c9;
   }
 }
 
 .search-bar {
   position: sticky;
-  top: 70rpx;
+  top: 50rpx;
 }
