修复换乘页面地铁线路不展示背景颜色的bug

--- a/components/loading/loading.less
+++ b/components/loading/loading.less
@@ -9,7 +9,7 @@
   vertical-align: center;
   text-align: center;
 
-  background-color: #fff;
+  background-color: #eeeef4;
 
   .loading {
     width: 32rpx;
