区分有无实时信息的公交展示; 项目改造; bugfix

--- a/pages/line_direction_stations/line_direction_stations.less
+++ b/pages/line_direction_stations/line_direction_stations.less
@@ -31,7 +31,7 @@
     justify-content: space-between;
 
     .row {
-      margin-bottom: 10rpx;
+      margin-bottom: 3rpx;
     }
 
     .station-row {
@@ -47,11 +47,6 @@
         font-size: 30rpx;
         color: #333333;
         margin-right: 15rpx;
-      }
-
-      .english-name {
-        font-size: 20rpx;
-        color: #555555;
       }
 
       .realtime {
@@ -74,8 +69,17 @@
       }
     }
 
+    .english-row {
+      margin-bottom: 8rpx;
+
+      .english-name {
+        font-size: 24rpx;
+        color: #555555;
+      }
+    }
+
     .location-row {
-      font-size: 24rpx;
+      font-size: 22rpx;
       color: darkgray;
 
       .city {
@@ -83,9 +87,9 @@
       }
 
       .icon {
-        width: 24rpx;
-        height: 24rpx;
-        margin-top: 4rpx;
+        vertical-align: -10%;
+        width: 22rpx;
+        height: 22rpx;
         margin-right: 10rpx;
       }
     }
